src/core/TLONParser.py
# Generated from TLON.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class TLONParser ( Parser ):

    grammarFileName = "TLON.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'||'", "'&&'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'^'", "'!'", "'='", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "','", "':'", "'true'", "'false'", "'nil'", 
                     "'if'", "'else'", "'while'", "'log'", "'for'", "'in'", 
                     "'funcion'", "'end'", "'retorno'", "'importar'", "'desde'", 
                     "'todo'", "'.'", "'agente'", "'comunidad'", "'linear_regression'", 
                     "'MLP'", "'train'", "'predict'", "'layers'", "'epochs'", 
                     "'learning_rate'", "'cluster'", "'cluster_predict'", 
                     "'plot'", "'MFT'" ]

    symbolicNames = [ "<INVALID>", "OR", "AND", "EQ", "NEQ", "GT", "LT", 
                      "GTEQ", "LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
                      "POW", "NOT", "ASSIGN", "OPAR", "CPAR", "OBRACE", 
                      "CBRACE", "OKEY", "CKEY", "COMMA", "POINTS", "TRUE", 
                      "FALSE", "NIL", "IF", "ELSE", "WHILE", "LOG", "FOR", 
                      "IN", "FUNCION", "END", "RETORNO", "IMPORT", "FROM", 
                      "ASTERISC", "POINT", "AGENTE", "COMUNIDAD", "LINEAR_REGRESSION", 
                      "MLP", "TRAIN", "PREDICT", "LAYERS", "EPOCHS", "LEARNING_RATE", 
                      "CLUSTER", "CLUSTER_PREDICT", "PLOT", "MFT", "ID", 
                      "INT", "FLOAT", "STRING", "COMMENT", "SPACE", "NEWLINE", 
                      "OTHER" ]

    RULE_parse = 0
    RULE_from_input = 1
    RULE_from_file = 2
    RULE_stat = 3
    RULE_compound_stat = 4
    RULE_simple_stat = 5
    RULE_linear_regression = 6
    RULE_mlp_expr = 7
    RULE_mlp_train = 8
    RULE_mlp_predict = 9
    RULE_clustering = 10
    RULE_clusteringPredict = 11
    RULE_plot = 12
    RULE_mft_special = 13
    RULE_assignment = 14
    RULE_if_stat = 15
    RULE_while_stat = 16
    RULE_for_stat = 17
    RULE_log = 18
    RULE_funcion = 19
    RULE_importar = 20
    RULE_retornar = 21
    RULE_condition_block = 22
    RULE_stat_block = 23
    RULE_array = 24
    RULE_accessarray = 25
    RULE_variable = 26
    RULE_parametro = 27
    RULE_expr = 28
    RULE_atom = 29
    RULE_agente = 30
    RULE_comunidad = 31
    RULE_objeto = 32
    RULE_keyvalue = 33

    ruleNames =  [ "parse", "from_input", "from_file", "stat", "compound_stat", 
                   "simple_stat", "linear_regression", "mlp_expr", "mlp_train", 
                   "mlp_predict", "clustering", "clusteringPredict", "plot", 
                   "mft_special", "assignment", "if_stat", "while_stat", 
                   "for_stat", "log", "funcion", "importar", "retornar", 
                   "condition_block", "stat_block", "array", "accessarray", 
                   "variable", "parametro", "expr", "atom", "agente", "comunidad", 
                   "objeto", "keyvalue" ]

    EOF = Token.EOF
    OR=1
    AND=2
    EQ=3
    NEQ=4
    GT=5
    LT=6
    GTEQ=7
    LTEQ=8
    PLUS=9
    MINUS=10
    MULT=11
    DIV=12
    MOD=13
    POW=14
    NOT=15
    ASSIGN=16
    OPAR=17
    CPAR=18
    OBRACE=19
    CBRACE=20
    OKEY=21
    CKEY=22
    COMMA=23
    POINTS=24
    TRUE=25
    FALSE=26
    NIL=27
    IF=28
    ELSE=29
    WHILE=30
    LOG=31
    FOR=32
    IN=33
    FUNCION=34
    END=35
    RETORNO=36
    IMPORT=37
    FROM=38
    ASTERISC=39
    POINT=40
    AGENTE=41
    COMUNIDAD=42
    LINEAR_REGRESSION=43
    MLP=44
    TRAIN=45
    PREDICT=46
    LAYERS=47
    EPOCHS=48
    LEARNING_RATE=49
    CLUSTER=50
    CLUSTER_PREDICT=51
    PLOT=52
    MFT=53
    ID=54
    INT=55
    FLOAT=56
    STRING=57
    COMMENT=58
    SPACE=59
    NEWLINE=60
    OTHER=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def from_input(self):
            return self.getTypedRuleContext(TLONParser.From_inputContext,0)


        def from_file(self):
            return self.getTypedRuleContext(TLONParser.From_fileContext,0)


        def getRuleIndex(self):
            return TLONParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = TLONParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.from_input()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.from_file()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class From_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self):
            return self.getTypedRuleContext(TLONParser.StatContext,0)


        def NEWLINE(self):
            return self.getToken(TLONParser.NEWLINE, 0)

        def getRuleIndex(self):
            return TLONParser.RULE_from_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom_input" ):
                listener.enterFrom_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom_input" ):
                listener.exitFrom_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrom_input" ):
                return visitor.visitFrom_input(self)
            else:
                return visitor.visitChildren(self)




    def from_input(self):

        localctx = TLONParser.From_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_from_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.stat()
            self.state = 73
            self.match(TLONParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class From_fileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TLONParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TLONParser.StatContext)
            else:
                return self.getTypedRuleContext(TLONParser.StatContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.NEWLINE)
            else:
                return self.getToken(TLONParser.NEWLINE, i)

        def getRuleIndex(self):
            return TLONParser.RULE_from_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom_file" ):
                listener.enterFrom_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom_file" ):
                listener.exitFrom_file(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrom_file" ):
                return visitor.visitFrom_file(self)
            else:
                return visitor.visitChildren(self)




    def from_file(self):

        localctx = TLONParser.From_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_from_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TLONParser.OBRACE) | (1 << TLONParser.OKEY) | (1 << TLONParser.TRUE) | (1 << TLONParser.FALSE) | (1 << TLONParser.NIL) | (1 << TLONParser.IF) | (1 << TLONParser.WHILE) | (1 << TLONParser.LOG) | (1 << TLONParser.FOR) | (1 << TLONParser.FUNCION) | (1 << TLONParser.RETORNO) | (1 << TLONParser.IMPORT) | (1 << TLONParser.FROM) | (1 << TLONParser.LINEAR_REGRESSION) | (1 << TLONParser.PLOT) | (1 << TLONParser.MFT) | (1 << TLONParser.ID) | (1 << TLONParser.INT) | (1 << TLONParser.FLOAT) | (1 << TLONParser.STRING) | (1 << TLONParser.NEWLINE) | (1 << TLONParser.OTHER))) != 0):
                self.state = 77
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [TLONParser.OBRACE, TLONParser.OKEY, TLONParser.TRUE, TLONParser.FALSE, TLONParser.NIL, TLONParser.IF, TLONParser.WHILE, TLONParser.LOG, TLONParser.FOR, TLONParser.FUNCION, TLONParser.RETORNO, TLONParser.IMPORT, TLONParser.FROM, TLONParser.LINEAR_REGRESSION, TLONParser.PLOT, TLONParser.MFT, TLONParser.ID, TLONParser.INT, TLONParser.FLOAT, TLONParser.STRING, TLONParser.OTHER]:
                    self.state = 75
                    self.stat()
                    pass
                elif token in [TLONParser.NEWLINE]:
                    self.state = 76
                    self.match(TLONParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(TLONParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stat(self):
            return self.getTypedRuleContext(TLONParser.Simple_statContext,0)


        def compound_stat(self):
            return self.getTypedRuleContext(TLONParser.Compound_statContext,0)


        def plot(self):
            return self.getTypedRuleContext(TLONParser.PlotContext,0)


        def getRuleIndex(self):
            return TLONParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = TLONParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stat)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TLONParser.OBRACE, TLONParser.OKEY, TLONParser.TRUE, TLONParser.FALSE, TLONParser.NIL, TLONParser.LOG, TLONParser.RETORNO, TLONParser.IMPORT, TLONParser.FROM, TLONParser.LINEAR_REGRESSION, TLONParser.MFT, TLONParser.ID, TLONParser.INT, TLONParser.FLOAT, TLONParser.STRING, TLONParser.OTHER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.simple_stat()
                pass
            elif token in [TLONParser.IF, TLONParser.WHILE, TLONParser.FOR, TLONParser.FUNCION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.compound_stat()
                pass
            elif token in [TLONParser.PLOT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.plot()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stat(self):
            return self.getTypedRuleContext(TLONParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(TLONParser.While_statContext,0)


        def for_stat(self):
            return self.getTypedRuleContext(TLONParser.For_statContext,0)


        def funcion(self):
            return self.getTypedRuleContext(TLONParser.FuncionContext,0)


        def getRuleIndex(self):
            return TLONParser.RULE_compound_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stat" ):
                listener.enterCompound_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stat" ):
                listener.exitCompound_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_stat" ):
                return visitor.visitCompound_stat(self)
            else:
                return visitor.visitChildren(self)




    def compound_stat(self):

        localctx = TLONParser.Compound_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compound_stat)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TLONParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.if_stat()
                pass
            elif token in [TLONParser.WHILE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.while_stat()
                pass
            elif token in [TLONParser.FOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.for_stat()
                pass
            elif token in [TLONParser.FUNCION]:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.funcion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Simple_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(TLONParser.AssignmentContext,0)


        def log(self):
            return self.getTypedRuleContext(TLONParser.LogContext,0)


        def importar(self):
            return self.getTypedRuleContext(TLONParser.ImportarContext,0)


        def retornar(self):
            return self.getTypedRuleContext(TLONParser.RetornarContext,0)


        def linear_regression(self):
            return self.getTypedRuleContext(TLONParser.Linear_regressionContext,0)


        def mft_special(self):
            return self.getTypedRuleContext(TLONParser.Mft_specialContext,0)


        def atom(self):
            return self.getTypedRuleContext(TLONParser.AtomContext,0)


        def NEWLINE(self):
            return self.getToken(TLONParser.NEWLINE, 0)

        def OTHER(self):
            return self.getToken(TLONParser.OTHER, 0)

        def getRuleIndex(self):
            return TLONParser.RULE_simple_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stat" ):
                listener.enterSimple_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stat" ):
                listener.exitSimple_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stat" ):
                return visitor.visitSimple_stat(self)
            else:
                return visitor.visitChildren(self)




    def simple_stat(self):

        localctx = TLONParser.Simple_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_simple_stat)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.log()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.importar()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.retornar()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 99
                self.linear_regression()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 100
                self.mft_special()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 101
                self.atom()
                self.state = 102
                self.match(TLONParser.NEWLINE)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 104
                self.match(TLONParser.OTHER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Linear_regressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LINEAR_REGRESSION(self):
            return self.getToken(TLONParser.LINEAR_REGRESSION, 0)

        def OPAR(self):
            return self.getToken(TLONParser.OPAR, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TLONParser.ExprContext)
            else:
                return self.getTypedRuleContext(TLONParser.ExprContext,i)


        def COMMA(self):
            return self.getToken(TLONParser.COMMA, 0)

        def CPAR(self):
            return self.getToken(TLONParser.CPAR, 0)

        def getRuleIndex(self):
            return TLONParser.RULE_linear_regression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinear_regression" ):
                listener.enterLinear_regression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinear_regression" ):
                listener.exitLinear_regression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLinear_regression" ):
                return visitor.visitLinear_regression(self)
            else:
                return visitor.visitChildren(self)




    def linear_regression(self):

        localctx = TLONParser.Linear_regressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_linear_regression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(TLONParser.LINEAR_REGRESSION)
            self.state = 108
            self.match(TLONParser.OPAR)
            self.state = 109
            self.expr(0)
            self.state = 110
            self.match(TLONParser.COMMA)
            self.state = 111
            self.expr(0)
            self.state = 112
            self.match(TLONParser.CPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mlp_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MLP(self):
            return self.getToken(TLONParser.MLP, 0)

        def OPAR(self):
            return self.getToken(TLONParser.OPAR, 0)

        def CPAR(self):
            return self.getToken(TLONParser.CPAR, 0)

        def mlp_train(self):
            return self.getTypedRuleContext(TLONParser.Mlp_trainContext,0)


        def mlp_predict(self):
            return self.getTypedRuleContext(TLONParser.Mlp_predictContext,0)


        def getRuleIndex(self):
            return TLONParser.RULE_mlp_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMlp_expr" ):
                listener.enterMlp_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMlp_expr" ):
                listener.exitMlp_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlp_expr" ):
                return visitor.visitMlp_expr(self)
            else:
                return visitor.visitChildren(self)




    def mlp_expr(self):

        localctx = TLONParser.Mlp_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mlp_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(TLONParser.MLP)
            self.state = 115
            self.match(TLONParser.OPAR)
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TLONParser.TRAIN]:
                self.state = 116
                self.mlp_train()
                pass
            elif token in [TLONParser.PREDICT]:
                self.state = 117
                self.mlp_predict()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 120
            self.match(TLONParser.CPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mlp_trainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRAIN(self):
            return self.getToken(TLONParser.TRAIN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.COMMA)
            else:
                return self.getToken(TLONParser.COMMA, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TLONParser.ExprContext)
            else:
                return self.getTypedRuleContext(TLONParser.ExprContext,i)


        def LAYERS(self):
            return self.getToken(TLONParser.LAYERS, 0)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.ASSIGN)
            else:
                return self.getToken(TLONParser.ASSIGN, i)

        def EPOCHS(self):
            return self.getToken(TLONParser.EPOCHS, 0)

        def LEARNING_RATE(self):
            return self.getToken(TLONParser.LEARNING_RATE, 0)

        def getRuleIndex(self):
            return TLONParser.RULE_mlp_train

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMlp_train" ):
                listener.enterMlp_train(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMlp_train" ):
                listener.exitMlp_train(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlp_train" ):
                return visitor.visitMlp_train(self)
            else:
                return visitor.visitChildren(self)




    def mlp_train(self):

        localctx = TLONParser.Mlp_trainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mlp_train)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(TLONParser.TRAIN)
            self.state = 123
            self.match(TLONParser.COMMA)
            self.state = 124
            self.expr(0)
            self.state = 125
            self.match(TLONParser.COMMA)
            self.state = 126
            self.expr(0)
            self.state = 127
            self.match(TLONParser.COMMA)
            self.state = 128
            self.match(TLONParser.LAYERS)
            self.state = 129
            self.match(TLONParser.ASSIGN)
            self.state = 130
            self.expr(0)
            self.state = 131
            self.match(TLONParser.COMMA)
            self.state = 132
            self.match(TLONParser.EPOCHS)
            self.state = 133
            self.match(TLONParser.ASSIGN)
            self.state = 134
            self.expr(0)
            self.state = 135
            self.match(TLONParser.COMMA)
            self.state = 136
            self.match(TLONParser.LEARNING_RATE)
            self.state = 137
            self.match(TLONParser.ASSIGN)
            self.state = 138
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mlp_predictContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREDICT(self):
            return self.getToken(TLONParser.PREDICT, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TLONParser.COMMA)
            else:
                return self.getToken(TLONParser.COMMA, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TLONParser.ExprContext)
            else:
                return self.getTypedRuleContext(TLONParser.ExprContext,i)


        def getRuleIndex(self):
            return TLONParser.RULE_mlp_predict

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMlp_predict" ):
                listener.enterMlp_predict(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMlp_predict" ):
                listener.exitMlp_predict(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlp_predict" ):
                return visitor.visitMlp_predict(self)
            else:
                return visitor.visitChildren(self)




    def mlp_predict(self):

        localctx = TLONParser.Mlp_predictContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mlp_predict)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(TLONParser.PREDICT)
            self.state = 141
            self.match(TLONParser.COMMA)
            self.state = 142
            self.expr(0)
            self.state = 143
            self.match(TLONParser.COMMA)
            self.state = 144
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClusteringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.method = None # Token
            self.params = None # ObjetoContext
